# agent-loop

./: .gitignore  CLAUDE.md  PROMPT_PHILOSOPHY.md  README.md  pyproject.toml
docs/: prompt_philosophy.md
presets/: single-file-review.yaml
src/agent_loop/: __init__.py  cli.py  git.py  logging.py  loop.py  preset.py  review.py  runner.py
src/agent_loop/presets/: accessibility.yaml  api-consistency.yaml  api-deprecation.yaml  api-docs.yaml  code-duplication-explore.yaml  code-duplication.yaml  code-refactor.yaml  comment-hygiene.yaml  config-externalization.yaml  dead-code.yaml  dependency-audit.yaml  dependency-injection.yaml  docs-review.yaml  error-handling.yaml  frontend-style.yaml  interface-segregation.yaml  logging-hygiene.yaml  migration.yaml  naming-consistency.yaml  prose-tightening.yaml  security-hardening-explore.yaml  security-hardening.yaml  security-review.yaml  single-file-review.yaml  test-coverage-explore.yaml  test-coverage.yaml  test-quality-explore.yaml  test-quality.yaml  test-strengthening.yaml  type-safety.yaml  type-tightening.yaml
src/agent_loop/presets/drafts/: feature-removal.yaml  impact-analysis.yaml
tests/: test_loop.py  test_preset.py  test_review.py  test_runner.py
