[project]
name = "agent-loop"
version = "0.1.0"
description = "CLI tool for running LLM agents in iterative refinement loops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "gitpython>=3.1",
]

[project.scripts]
agent-loop = "agent_loop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_loop"]
artifacts = ["src/agent_loop/presets/*.yaml"]

[tool.ruff]
line-length = 140
