[project]
name = "agent-loop"
dynamic = ["version"]
description = "CLI tool for running LLM agents in iterative refinement loops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "types-pyyaml>=6.0",
]

[project.scripts]
agent-loop = "agent_loop.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.wheel]
packages = ["src/agent_loop"]
include = ["src/agent_loop/presets/*.yaml"]

[tool.ruff]
line-length = 140
